--- a/week_11/day_03/homework/hw_callbacks_enumeration_traveller_start/package.json
+++ b/week_11/day_03/homework/hw_callbacks_enumeration_traveller_start/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "enumeration_lab",
+  "name": "hw_callbacks_enumeration_context_traveller_end",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "mocha specs"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "mocha": "^5.0.1"
-  },
-  "dependencies": {
-    "npm": "^5.8.0"
+    "mocha": "^5.0.5"
   }
 }
