--- a/week_12/day_02/events-lab-master/package.json
+++ b/week_12/day_02/events-lab-master/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "events_start",
+  "name": "events_lab",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "express": "^4.16.3",
-    "npm": "^5.8.0"
-  },
-  "devDependencies": {},
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.3"
+  }
 }
