wk13 d1 - Express Intro Lab

--- a/week_13/day_01/express_intro/package.json
+++ b/week_13/day_01/express_intro/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "homework_start",
+  "name": "y",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "build": "webpack -w"
+    "server:dev": "nodemon server.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3",
-    "npm": "^5.8.0"
+    "express": "^4.16.3"
   },
   "devDependencies": {
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.14"
+    "nodemon": "^1.17.3"
   }
 }
